--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.dynamic.datasource.mysql.password=123456
 #画像平台上传到hdfs的文件地址和路径
 hdfs.url=hdfs://hadoop102:8020
 hdfs.username=atguigu
-hdfs.filedir=/user_profile_manage
+hdfs.filedir=/user_profile
 
 #上传文件大小的限制，如果有超大jar包可以调整
 spring.servlet.multipart.max-file-size=100MB
