--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.datasource.dynamic.datasource.mysql.username=root
 spring.datasource.dynamic.datasource.mysql.password=123456
 
 #用于连接clickhouse 保存标签计算结果 和 人群包    如果这里没装clickhouse 这里可以先注掉
-#spring.datasource.dynamic.datasource.clickhouse.url=jdbc:clickhouse://hadoop102:8123/user_profile
-#spring.datasource.dynamic.datasource.clickhouse.driver-class-name=ru.yandex.clickhouse.ClickHouseDriver
+spring.datasource.dynamic.datasource.clickhouse.url=jdbc:clickhouse://hadoop102:8123/user_profile1018
+spring.datasource.dynamic.datasource.clickhouse.driver-class-name=ru.yandex.clickhouse.ClickHouseDriver
 
 #画像平台上传到hdfs的文件地址和路径
 hdfs.url=hdfs://hadoop102:8020
